fixed inventory text overflow and images relative

--- a/frontend/src/app/+admin/inventory/inventory.component.less
+++ b/frontend/src/app/+admin/inventory/inventory.component.less
@@ -37,6 +37,11 @@
 			text-align: center;
 			margin-bottom: 5px;
 			font-size: 18px;
+			& .div {
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
 		}
 
 		& .icon {
