--- a/frontend/src/app/+main/inventory/inventory.component.less
+++ b/frontend/src/app/+main/inventory/inventory.component.less
@@ -21,6 +21,11 @@
 	text-align: center;
 	margin-bottom: 5px;
 	font-size: 18px;
+	& .div {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
 }
 
 .icon {
@@ -81,6 +86,6 @@
 	position: fixed;
 	top: 100px;
 	z-index: 2000;
-    left: 50%;
-    transform: translate(-50%, 0);
+	left: 50%;
+	transform: translate(-50%, 0);
 }
